; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_fill_ip_sockaddr_4_6.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_fill_ip_sockaddr_4_6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.sockaddr_in_4_6 = type { %struct.sockaddr_in }
%struct.sockaddr_in = type { i32, %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.in_addr = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%union.sockaddr_in_4_6*, i32, i32)* @fill_ip_sockaddr_4_6 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_ip_sockaddr_4_6(%union.sockaddr_in_4_6* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.in_addr, align 4
  %5 = alloca %union.sockaddr_in_4_6*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.sockaddr_in*, align 8
  %8 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  store i32 %1, i32* %8, align 4
  store %union.sockaddr_in_4_6* %0, %union.sockaddr_in_4_6** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %union.sockaddr_in_4_6*, %union.sockaddr_in_4_6** %5, align 8
  %10 = bitcast %union.sockaddr_in_4_6* %9 to %struct.sockaddr_in*
  store %struct.sockaddr_in* %10, %struct.sockaddr_in** %7, align 8
  %11 = load i32, i32* @AF_INET, align 4
  %12 = load %struct.sockaddr_in*, %struct.sockaddr_in** %7, align 8
  %13 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %12, i32 0, i32 3
  store i32 %11, i32* %13, align 4
  %14 = load %struct.sockaddr_in*, %struct.sockaddr_in** %7, align 8
  %15 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %14, i32 0, i32 0
  store i32 16, i32* %15, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.sockaddr_in*, %struct.sockaddr_in** %7, align 8
  %18 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 4
  %19 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.sockaddr_in*, %struct.sockaddr_in** %7, align 8
  %22 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i32 %20, i32* %23, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
